tests/derive/not_run.stderr
error: Systems have only one method: run
 --> $DIR/not_run.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^
